[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Actor-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/gameScreen/GameSceneControl.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 256
font_data = ExtResource( 1 )

[node name="GameSceneControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titleLabel" type="Label" parent="VBoxContainer"]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 95.0
rect_min_size = Vector2( 1024, 96 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.129412, 0.152941, 0.188235, 1 )
text = "Click the letter that you see"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letterLabel" type="Label" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 1024.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A"
align = 1
valign = 1

[node name="youClicked" type="Label" parent="VBoxContainer"]
margin_top = 408.0
margin_right = 1024.0
margin_bottom = 504.0
rect_min_size = Vector2( 1024, 96 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.129412, 0.152941, 0.188235, 1 )
text = "You clicked:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yourMistakes" type="Label" parent="VBoxContainer"]
margin_top = 506.0
margin_right = 1024.0
margin_bottom = 602.0
rect_min_size = Vector2( 1024, 96 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.129412, 0.152941, 0.188235, 1 )
text = "Your Mistakes: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
